<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PiRover</string>
    <string name="action_main">Controller</string>
    <string name="action_playback">Playback</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_browse">Browse</string>
    <string name="action_shutdown">Shutdown</string>
    <string name="action_connect">Connect</string>
    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>
    <string name="camera">Camera</string>
    <string name="camera_state_disconnected">Not connected</string>
    <string name="camera_state_connected">Connected</string>
    <string name="camera_state_unable_to_connect">Unable to connect</string>
    <string name="camera_state_connecting">Connecting&#8230;</string>
    <string name="camera_fps_count">%d fps</string>
    <string name="camera_fps_count_default">0 fps</string>
    <string name="camera_bandwidth">%d kbps</string>
    <string name="camera_bandwidth_default">0 bytes/s</string>
    <string name="camera_record_button">R</string>
    <string name="broadcast_loading_title">Loading</string>
    <string name="broadcast_loading_text">Detecting PiRover&#8230;</string>
    <string name="broadcast_timeout_title">Unable to detect PiRover</string>
    <string name="broadcast_timeout_message">Manual IP address entry</string>
    <string name="broadcast_disconnected_title">Connection error</string>
    <string name="broadcast_disconnected_message">Device is not on a wifi network</string>
    <string name="broadcast_rescan">Scan again</string>
    <string name="controller_accelerator">Accelerator</string>
    <string name="controller_steering_wheel">Steering Wheel</string>
    <string name="playback_loading_title">Loading</string>
    <string name="playback_loading_text">Buffering video</string>
    
    <string name="pref_connection_title">Connection</string>
    <string name="pref_autoconnect_key">auto_connect</string>
    <string name="pref_autoconnect_title">Auto connect</string>
    <string name="pref_autoconnect_default">true</string>
    <string name="pref_autoconnect_summary">Auto connect when the app starts</string>
    <string name="pref_broadcast_port_key">broadcast_port</string>
    <string name="pref_broadcast_port_title">Broadcast port</string>
    <string name="pref_broadcast_port_default">1337</string>
    <string name="pref_broadcast_port_summary">Port the broadcast server is listening on</string>
    <string name="pref_control_title">Controller</string>
    <string name="pref_gyroscope_key">gyroscope</string>
    <string name="pref_gyroscope_title">Gyroscope</string>
    <string name="pref_gyroscope_default">false</string>
    <string name="pref_gyroscope_summary">Enables gyroscope controls</string>
    <string name="pref_gyroscope_smoothing_key">gyroscope_smoothing</string>
    <string name="pref_gyroscope_smoothing_title">Gyroscope smoothing</string>
    <string name="pref_gyroscope_smoothing_default">true</string>
    <string name="pref_gyroscope_smoothing_summary">Averages gyroscope readings; causes slight lag</string>
    <string name="pref_playback_title">Playback</string>
    <string name="pref_fps_key">fps</string>
    <string name="pref_fps_title">Playback fps</string>
    <string name="pref_fps_default">0</string>
    <string name="pref_fps_summary">Fps calculator strategy</string>
    <string-array name="pref_fps_entries">
        <item>Replicate</item>
        <item>Mean</item>
        <item>Median</item>
        <item>Mode</item>
        <item>User specified</item>
    </string-array>
    <string-array name="pref_fps_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string name="pref_fps_specify_key">fps_specify</string>
    <string name="pref_fps_specify_title">FPS to play videos at</string>
    <string name="pref_fps_specify_default">11</string>
    <string name="pref_fps_specify_summary">Only used when fps strategy is user specified</string>
    <string name="filename">Filename</string>
    <string name="size">Size</string>
    <string name="file_size">%fMB</string>
    <string name="date">Date</string>

    <string name="text_delete_confirm">Are you sure you want to delete this item?</string>
    <string name="sensor_no_reading">No sensor reading</string>
    <string name="sensor">Distance: %dCM</string>

</resources>
