<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory 
        android:title="@string/pref_connection_title">

        <CheckBoxPreference
            android:key="@string/pref_autoconnect_key"
            android:title="@string/pref_autoconnect_title"
            android:defaultValue="@string/pref_autoconnect_default"
            android:summary="@string/pref_autoconnect_summary" />

        <EditTextPreference
            android:key="@string/pref_broadcast_port_key"
            android:title="@string/pref_broadcast_port_title"
            android:defaultValue="@string/pref_broadcast_port_default"
            android:summary="@string/pref_broadcast_port_summary"
            android:inputType="number" />
        
    </PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/pref_control_title">
        
        <CheckBoxPreference 
		    android:key="@string/pref_gyroscope_key"
		    android:title="@string/pref_gyroscope_title"
		    android:defaultValue="@string/pref_gyroscope_default"
		    android:summary="@string/pref_gyroscope_summary"
		    android:inputType="number" />
        
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/pref_playback_title">

        <ListPreference
            android:key="@string/pref_fps_key"
            android:title="@string/pref_fps_title"
            android:entries="@array/pref_fps_entries"
            android:entryValues="@array/pref_fps_values"
            android:summary="@string/pref_fps_summary"
            android:defaultValue="@string/pref_fps_default" />

        <EditTextPreference
            android:key="@string/pref_fps_specify_key"
            android:title="@string/pref_fps_specify_title"
            android:defaultValue="@string/pref_fps_specify_default"
            android:summary="@string/pref_fps_specify_summary"
            android:inputType="number" />

    </PreferenceCategory>

</PreferenceScreen>