<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jackpf.pirover.MainActivity" >

    <ImageView
        android:id="@+id/camera"
        android:layout_width="320sp"
        android:layout_height="240sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        android:contentDescription="@string/camera" />

    <ImageView
        android:id="@+id/steering_wheel"
        android:layout_width="128sp"
        android:layout_height="128sp"
        android:scaleType="matrix"
        android:src="@drawable/steering_wheel"
        android:contentDescription="@string/controller_steering_wheel"
        android:layout_below="@+id/camera_status"
        android:layout_alignStart="@+id/fps_counter"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/camera_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/camera"
        android:layout_centerHorizontal="true"
        android:text="@string/camera_state_disconnected" />

    <Button
        android:id="@+id/record"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/camera"
        android:layout_alignTop="@+id/camera"
        android:text="@string/camera_record_button" />

    <ImageView
        android:id="@+id/accelerator"
        android:layout_width="32sp"
        android:layout_height="128sp"
        android:layout_alignLeft="@+id/record"
        android:layout_alignTop="@+id/steering_wheel"
        android:scaleType="fitEnd"
        android:src="@drawable/accelerator"
        android:contentDescription="@string/controller_accelerator"/>

    <TextView
        android:id="@+id/bandwidth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/camera"
        android:layout_below="@+id/camera"
        android:text="@string/camera_bandwidth_default" />

    <TextView
        android:id="@+id/fps_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/camera_status"
        android:layout_alignBottom="@+id/camera_status"
        android:layout_alignLeft="@+id/camera"
        android:text="@string/camera_fps_count_default" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="^"
        android:id="@+id/launcher_up"
        android:layout_toEndOf="@+id/steering_wheel"
        android:layout_alignParentTop="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="&lt;"
        android:id="@+id/launcher_left"
        android:layout_below="@+id/launcher_up"
        android:layout_alignParentStart="true"
        android:layout_marginTop="60dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=">"
        android:id="@+id/launcher_right"
        android:layout_alignTop="@+id/launcher_left"
        android:layout_alignParentRight="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="v"
        android:id="@+id/launcher_down"
        android:layout_above="@+id/camera_status"
        android:layout_centerHorizontal="true"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fire"
        android:id="@+id/launcher_fire"
        android:layout_alignParentBottom="true"
        android:layout_toStartOf="@+id/camera_status"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/motion_off"
        android:id="@+id/camera_motion"
        android:layout_toStartOf="@+id/launcher_fire"
        android:layout_alignTop="@+id/launcher_fire"
        android:layout_alignStart="@+id/steering_wheel"/>

    <TextView
        android:id="@+id/sensor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sensor_no_reading"
        android:layout_below="@+id/camera_status"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>