<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.jackpf.pirover.PlaybackAction">

    <ImageView
        android:id="@+id/camera"
        android:layout_width="320sp"
        android:layout_height="240sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/black"
        android:contentDescription="@string/camera" />

    <ProgressBar
        android:id="@+id/video_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="320sp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/camera"
        android:layout_centerHorizontal="true"
        android:indeterminate="false"
        android:indeterminateOnly="false"
        android:max="100"
        android:minHeight="10dp"
        android:progress="0" />

    <ImageButton
        android:id="@+id/fastforward"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignRight="@+id/video_progress"
        android:layout_below="@+id/video_progress"
        android:onClick="playbackControl"
        android:background="@drawable/media_fastforward" />

    <ImageButton
        android:id="@+id/rewind"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignLeft="@+id/video_progress"
        android:layout_below="@+id/video_progress"
        android:background="@drawable/media_rewind"
        android:onClick="playbackControl" />

    <ImageButton
        android:id="@+id/play"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignTop="@+id/fastforward"
        android:layout_centerHorizontal="true"
        android:background="@drawable/media_play_state"
        android:onClick="playbackControl" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filename"
        android:id="@+id/filename_key"
        android:layout_below="@+id/rewind"
        android:layout_alignStart="@+id/rewind" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/filename_value"
        android:layout_alignTop="@+id/filename_key"
        android:layout_toEndOf="@+id/filename_key"
        android:layout_marginLeft="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:id="@+id/size_key"
        android:layout_below="@+id/filename_key"
        android:layout_alignStart="@+id/filename_key" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/size_value"
        android:layout_toEndOf="@+id/size_key"
        android:layout_alignTop="@+id/size_key"
        android:layout_alignStart="@+id/filename_value" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/date_key"
        android:layout_below="@+id/size_key"
        android:layout_alignStart="@+id/size_key" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/date_value"
        android:layout_toEndOf="@+id/size_value"
        android:layout_alignTop="@+id/date_key"
        android:layout_alignStart="@+id/size_value"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fps"
        android:layout_alignTop="@+id/filename_value"
        android:layout_alignEnd="@+id/video_progress" />

</RelativeLayout>
